--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -8,24 +8,29 @@ on:
 
 jobs:
   test:
-    strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        zig-version: [0.13.0]
-    runs-on: ${{ matrix.os }}
+    runs-on: ubuntu-latest
 
     steps:
       - uses: actions/checkout@v4
 
       - uses: goto-bus-stop/setup-zig@v2
         with:
-          version: ${{ matrix.zig-version }}
+          version: 0.13.0
 
-      - name: Run tests
-        run: zig build test
+      - name: Version info
+        run: |
+          zig version
+          echo "PWD: $(pwd)"
+          ls -la
+          echo "--- src/ contents ---"
+          ls -la src/
+          echo "--- tests/ contents ---"
+          ls -la tests/
+
+      - name: Run tests with verbose output
+        run: zig build test --verbose
+        env:
+          CI: true
 
       - name: Check formatting
         run: zig fmt --check src/
-
-      - name: Build
-        run: zig build -Doptimize=ReleaseSafe
